--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "react-lazyload": "^3.2.0",
     "react-minimal-side-navigation": "^1.9.2",
     "react-pro-sidebar": "^0.6.0",
+    "react-redux": "^7.2.6",
     "react-remove-scroll": "^2.4.3",
     "react-router-cache-route": "^1.12.1",
     "react-router-dom": "^5.3.0",
     "react-string-format": "^1.0.0",
+    "redux": "^4.1.2",
     "sass": "^1.44.0",
     "styled-components": "^5.3.3",
     "swiper": "^7.3.1"
