--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.4",
     "hamburger-react": "^2.4.1",
     "list-react-files": "^0.2.0",
+    "metamask-react": "^2.1.2",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-burger-menu": "^3.0.6",
