--- a/package.json
+++ b/package.json
@@ -16,9 +16,18 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@metamask/detect-provider": "^1.2.0",
+    "@metamask/onboarding": "^1.0.1",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
+    "@vitejs/plugin-react": "^1.1.3",
+    "Buffer": "0.0.0",
     "axios": "^0.21.4",
+    "browser-buffer": "0.0.1-1",
+    "buffer": "^6.0.3",
+    "buffer-from": "^1.1.2",
+    "ethereumjs-abi": "^0.6.8",
+    "ethereumjs-util": "^7.1.3",
     "hamburger-react": "^2.4.1",
     "list-react-files": "^0.2.0",
     "metamask-react": "^2.1.2",
@@ -40,8 +49,10 @@
     "react-select": "^5.2.1",
     "react-string-format": "^1.0.0",
     "redux": "^4.1.2",
+    "rollup-plugin-polyfill-node": "^0.8.0",
     "sass": "^1.44.0",
     "styled-components": "^5.3.3",
-    "swiper": "^7.3.1"
+    "swiper": "^7.3.1",
+    "web3": "^1.6.1"
   }
 }
