--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "buffer-from": "^1.1.2",
     "ethereumjs-abi": "^0.6.8",
     "ethereumjs-util": "^7.1.3",
+    "ethers": "^5.5.2",
     "hamburger-react": "^2.4.1",
     "list-react-files": "^0.2.0",
     "metamask-react": "^2.1.2",
