add treatment errors and making requests(/src/api/)

--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "ethers": "^5.5.2",
     "hamburger-react": "^2.4.1",
     "list-react-files": "^0.2.0",
+    "material-ui": "^0.20.2",
+    "materialize": "^1.0.0",
+    "materialize-css": "^1.0.0-rc.2",
     "metamask-react": "^2.1.2",
+    "mui": "0.0.1",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-burger-menu": "^3.0.6",
