--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
     "@vitejs/plugin-react": "^1.1.3",
+    "Buffer": "0.0.0",
     "axios": "^0.21.4",
     "browser-buffer": "0.0.1-1",
     "buffer": "^6.0.3",
-    "Buffer": "0.0.0",
     "buffer-from": "^1.1.2",
     "ethereumjs-abi": "^0.6.8",
     "ethereumjs-util": "^7.1.3",
@@ -58,6 +58,7 @@
     "sass": "^1.44.0",
     "styled-components": "^5.3.3",
     "swiper": "^7.3.1",
+    "vite-aliases": "^0.8.7",
     "web3": "^1.6.1"
   }
 }
