--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
     "@vitejs/plugin-react": "^1.1.3",
-    "Buffer": "0.0.0",
     "axios": "^0.21.4",
     "browser-buffer": "0.0.1-1",
     "buffer": "^6.0.3",
+    "Buffer": "0.0.0",
     "buffer-from": "^1.1.2",
     "ethereumjs-abi": "^0.6.8",
     "ethereumjs-util": "^7.1.3",
     "ethers": "^5.5.2",
+    "formik": "^2.2.9",
     "hamburger-react": "^2.4.1",
     "list-react-files": "^0.2.0",
     "material-ui": "^0.20.2",
@@ -41,6 +42,7 @@
     "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.1",
     "react-fast-marquee": "^1.2.1",
+    "react-hook-form": "^7.24.1",
     "react-icons": "^4.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.4",
